# msh-state-system

./: CMakeLists.txt  Makefile  README.md
include/: HighPerformanceState.h  LowPowerState.h  MySweetHome.h  NormalState.h  SleepState.h  State.h
src/: HighPerformanceState.cpp  LowPowerState.cpp  MySweetHome.cpp  NormalState.cpp  SleepState.cpp
